--- a/style.css
+++ b/style.css
@@ -5,3 +5,24 @@ body
   font-size: 20px;
   color: white;
 }
+h1
+{
+	color: gray;
+}
+
+/* Nieodwiedzony link */
+a:link
+{
+	color:#FF0064;
+}
+/* Odwiedzony link */
+a:visited
+{
+	color:#FF0064;
+}
+
+/* Najechany link */
+a:hover
+{
+	color:purple;
+}
