--- a/style.css
+++ b/style.css
@@ -40,23 +40,34 @@ a:hover
 #nav
 {
 	background-color: #424949;
-	width: 300px;
-	min-height:600px;
-	float:left;
+	width: 1500px;
+	min-height:50px;
 	padding: 10px;
 }
 #general
 {
 	background-color: #283747;
-	width: 900px;
+	width: 1500px;
 	min-height:600px;
-	float:left;
 	padding: 10px;
 }
 #links
 {
 	width: 1500px;
 	min-height:200px;
-	clear:both;
 	text-align: center;
+}
+.option
+{
+	float: left;
+	min-width: 50px;
+	min-height: 25px;
+	padding: 10px;
+	border-right: 2px solid #444444;
+	opacity:0.8;
+}
+.option:hover
+{
+	background-color:#444434;
+	cursor:pointer;
 }
